Adding in the overse mechanics section and updating the todos

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,11 @@ This is a basic example which shows you how to solve a common problem:
 ## TODOs
 
 Add in regex case insensitivity to type argument of the anticiapator dict --TODO
-Add in Metadata dictionary interaction and functionality: likely involving big update to megametadata --TODO
-introduce data spoofing elements to mimic data types with random data --TODO
+
+~~Add in Metadata dictionary interaction and functionality: likely involving big update to megametadata~~ --TODO
+
+~~introduce data spoofing elements to mimic data types with random data~~ --TODO
+
 constrain the spoof generation to the features of the underlying data, min max, type combos etc --TODO
 
 
@@ -54,3 +57,14 @@ Functions needed:
 - Random generator function which can act on a grouped column. 
 
 - wrapper function which applies the above process and exploits the above function to create a spoofed dataset
+
+
+## Overse Mechanics
+
+The Overse project is an attempt to add tooling to an R analysis or investigative workflow. The tooling has been concieved as a mechanism to remove the occurance of times when through time. policy changes or employment changes, the meaning and functionality of an analysis becomes lost. It will do this by filling a process with documentation, and making it easy to act with moderation in terms of access to the full database. 
+
+The underlying data may move, and there's no guarantee even the original author will be able to smoothly apply the work done in that project to another one without any working examples.
+
+You may want to build in tests to functions, but aren't comfortable/allowed to embed sensitive data in your functions.
+
+An author may leave, and all the background work put into figuring out the underlying methodology behind a variable may become lost. And even if documented, it may go missing. 
