updating the readme to reflect the completion of some TODOs and adding some thoughts on testing the spoof functionality

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,9 @@ Add in regex case insensitivity to type argument of the anticiapator dict --TODO
 
 ~~introduce data spoofing elements to mimic data types with random data~~ --TODO
 
-constrain the spoof generation to the features of the underlying data, min max, type combos etc --TODO
+~~constrain the spoof generation to the features of the underlying data, min max, type combos etc ~~--TODO
+
+Add further tests to the output of the spoofing functionality --TODO
 
 
 ## New Spoofing system
@@ -52,9 +54,9 @@ This process will repeat until either 100+ rows have been spoofed or there is no
 
 Functions needed:
 
-- Qualifier function which can identify the ordinal columns in a way  which would be accepted by vars in summarise at/ alternatively a boolean function which can be accepted by summarise if. 
+- ~~Qualifier function which can identify the ordinal columns in a way  which would be accepted by vars in summarise at/ alternatively a boolean function which can be accepted by summarise if. ~~
 
-- Random generator function which can act on a grouped column. 
+- ~~Random generator function which can act on a grouped column. ~~
 
 - wrapper function which applies the above process and exploits the above function to create a spoofed dataset
 
